# meridian-assistant

./: .env.example  .gitignore  Makefile  PATH_TO_PRODUCTION.md  README.md  pyproject.toml  requirements.txt
docs/: PATH_TO_PRODUCTION.md  booking_api_spec.md
eval/: run_eval.py  testset.yaml
eval/results/: report.json  report.md
src/meridian/: __init__.py  booking_client.py  cli.py  config.py  domain.py
src/meridian/agent/: __init__.py  graph.py  handoff.py  llm.py  prompts.py  router.py  state.py  tools.py
src/meridian/api/: __init__.py  mock_booking_api.py
src/meridian/app/: __init__.py  streamlit_app.py
src/meridian/ingestion/: __init__.py  build_index.py  chunkers.py  pdf_extract.py
src/meridian/knowledge/: __init__.py  service_area.py
src/meridian/retrieval/: __init__.py  citations.py  retriever.py
tests/: test_booking_api.py  test_extraction.py  test_service_area.py
